Name:                stm-conduit
Version:             2.2
Synopsis:            Introduces conduits to channels, and promotes using
                     conduits concurrently.
Description:         Provides two simple conduit wrappers around STM
                     channels - a source and a sink.
Homepage:            https://github.com/wowus/stm-conduit
License:             BSD3
License-file:        LICENSE
Author:              Clark Gaebel
Maintainer:          cgaebel@uwaterloo.ca
Category:            Concurrency, Conduit

Build-type:          Simple

Cabal-version:       >=1.8

Library
    exposed-modules:
        Data.Conduit.Async
        Data.Conduit.TMChan
        Data.Conduit.TQueue

    build-depends:
        base           == 4.*
      , transformers   >= 0.2 && <= 0.4
      , stm            == 2.4.*
      , stm-chans      >= 2.0 && < 3.1
      , cereal         >= 0.4.0.1
      , cereal-conduit >= 0.7.2
      , conduit        == 1.0.*
      , directory      >= 1.1
      , resourcet      >= 0.3 && < 0.5
      , async          >= 2.0.1
      , monad-control  >= 0.3.2
      , monad-loops    >= 0.4.2
      , lifted-base    >= 0.2.1
      , lifted-async   >= 0.1

    ghc-options: -Wall -fwarn-tabs -fwarn-unused-imports

test-suite stm-conduit-tests
    type:           exitcode-stdio-1.0
    main-is:        Test.hs
    hs-source-dirs: test/

    ghc-options:    -rtsopts=all -threaded

    build-Depends:
        base       == 4.*
      , QuickCheck >= 2
      , HUnit
      , test-framework
      , test-framework-hunit
      , test-framework-quickcheck2
      , stm
      , stm-conduit
      , conduit
      , transformers
      , stm-chans
      , resourcet
      , directory

source-repository head
    type:     git
    location: git://github.com/wowus/stm-conduit.git
