Name:                stm-conduit
Version:             3.0.0
Synopsis:            Introduces conduits to channels, and promotes using conduits concurrently.
Description:         Provides two simple conduit wrappers around STM channels - a source and a sink.
Homepage:            https://github.com/cgaebel/stm-conduit
License:             BSD3
License-file:        LICENSE
Author:              Clark Gaebel
Maintainer:          cg.wowus.cg@gmail.com
Category:            Concurrency, Conduit

Build-type:          Simple

tested-with: GHC >= 7.6 && < 7.11
-- selects GHC 7.4.1, 7.4.2, 7.6.1, 7.6.2, and 7.6.3

Cabal-version:       >=1.8

Library
    exposed-modules:
        Data.Conduit.Async
        Data.Conduit.TMChan
        Data.Conduit.TQueue
        Data.Conduit.Utils

    other-modules:
        Data.Conduit.Async.Composition

    build-depends:
        base                == 4.*
      , transformers        >= 0.2 && < 0.6
      , stm                 == 2.4.*
      , stm-chans           >= 2.0 && < 3.1
      , cereal              >= 0.4.0.1
      , cereal-conduit      >= 0.7.2
      , conduit             >= 1.0 && < 1.3
      , conduit-combinators >= 0.3
      , conduit-extra       >= 1.0 && < 1.2
      , directory           >= 1.1
      , resourcet           >= 0.3 && < 1.2
      , async               >= 2.0.1
      , monad-control       >= 0.3.2
      , monad-loops         >= 0.4.2
      , lifted-base         >= 0.2.1
      , lifted-async        >= 0.1
      , void                >= 0.7
      , ghc-prim

    ghc-options: -Wall -fwarn-tabs -fwarn-unused-imports

test-suite stm-conduit-doctests
    type:           exitcode-stdio-1.0
    main-is:        DocTests.hs
    ghc-options:    -threaded
    hs-source-dirs: test/
                    ./
    build-depends:  base
                  , doctest

test-suite stm-conduit-tests
    type:           exitcode-stdio-1.0
    main-is:        Test.hs
    hs-source-dirs: test/

    ghc-options:    -rtsopts=all -threaded

    build-Depends:
        base       == 4.*
      , QuickCheck >= 2
      , HUnit
      , test-framework
      , test-framework-hunit
      , test-framework-quickcheck2
      , stm
      , stm-conduit
      , conduit
      , conduit-combinators >= 0.3
      , transformers
      , stm-chans
      , resourcet
      , directory

source-repository head
    type:     git
    location: git://github.com/cgaebel/stm-conduit.git
